2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Inline AC_GUILE_PG_[BB]COMPAT into configure.ac.

	* build-aux/guile-pg.m4 (AC_GUILE_PG_BCOMPAT)
	(AC_GUILE_PG_FCOMPAT): Incorporate these AC_DEFUNs from here...
	* configure.ac: ...to here, at top-level.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Upgrade m4 to avoid obsolete constructs; use autoreconf.

	* build-aux/guile-pg.m4
	(PQ_FLAGS): Use ‘AS_HELP_STRING’, ‘AC_MSG_ERROR’.
	(AC_GUILE_PG_BCOMPAT): Use ‘AC_COMPILE_IFELSE’, ‘AC_LANG_PROGRAM’.
	* configure.ac (AM_CONFIG_HEADER): Replace with ‘AC_CONFIG_HEADERS’.
	(AC_STDC_HEADERS): Replace with ‘AC_HEADER_STDC’.
	(AC_HAVE_HEADERS): Replace with ‘AC_CHECK_HEADERS’.
	* autogen.sh: Do ‘set -e’; replace libtoolize, aclocal, autoheader,
	autoconf, and automake invocations with one autoreconf invocation.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Instantiate test/show-platform at configure-time.

	* configure.ac (test/show-platform): New AC_GUILE_PG_CONFIG_SCRIPT.
	* Makefile.am (dist-hook): Delete target.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build install] Installed punified Scheme, sans ".scm" extension.

	* autogen.sh: Import Guile-BAUX module ‘punify’.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[uninstall] Fix bug: Make sure everything is properly deleted.

	* autogen.sh: Import uninstall-sofixed.
	* Makefile.am (EXTRA_DIST): Add build-aux/uninstall-sofixed.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Use U+2018, U+2019 in example.

	* doc/guile-pg.texi: Add ‘coding’ cookie for Emacs;
	declare document encoding to be ‘UTF-8’.
	* ref.texh: Add ‘coding’ local variable at eof.
	(Easy Interaction): Use U+2018, U+2019 in example.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build maint] Don't bundle modsup.h; copy 3 macros from it, instead.

	* autogen.sh: Don't maintain modsup.h, modsup.h.snap.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>
